parse negative numbers